# NFL-Big-Data-Bowl-2025

./: .gitignore  README.md  pyproject.toml
notebooks/: games_eda.ipynb  players_eda.ipynb
