[tool.poetry]
name = "nfl-big-data-bowl-2025"
version = "0.1.0"
description = ""
authors = ["RonanRibouletPython <newsletterpython13@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
